tests/baselines/reference/InvalidNonInstantiatedModule.errors.txt
==== tests/cases/conformance/internalModules/moduleDeclarations/InvalidNonInstantiatedModule.ts (2 errors) ====
    module M {
        export interface Point { x: number; y: number }
    }
    
    var m = M; // Error, not instantiated can not be used as var
            ~
!!! error TS2304: Cannot find name 'M'.
    
    var x: typeof M; // Error only a namespace
                  ~
!!! error TS2304: Cannot find name 'M'.
    